syntax = "proto3";

package go.micro.srv.user;

service UserService {
	rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse){}
}

message User {
	int64 id = 1;
	string user_id = 2;
	string user_name =3;
}

message Pair {
    int32 key = 1;
    string values = 2;
}

message GetUserByIdRequest{
	int64 id = 1;
}

message GetUserByIdResponse {
	string code = 1;
	string msg = 2;
	User user = 3;
	// map
    map<string, Pair> header = 4;
}
